tests/analyze/try-mixed-carriers/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `option 't32`, but found `result 't31 't30`.
> 16 | 	try first = safe-head ids  # option int — wrong carrier
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type mismatch: expected `result 't35 string`, but found `option 't32`.
> 15 | 	try ids = lookup id     # result (list int) string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
